--- a/index.html
+++ b/index.html
@@ -215,17 +215,18 @@
         </div>
         <div class="main-screen">
             <div class="status-bar">
-                DATA PRE-MINE: COMING SOON | PROJECT LAUNCH: COMING SOON
+                DATA PRE-MINE: SEP 2024 | PROJECT LAUNCH: OCT 2024
             </div>
             <div class="content">
                 <h1>UNWRAPPED: Spotify Data DAO</h1>
-                <p>Transform your Spotify listening habits into currency.</p>
+                <p>We are a data DAO built on Vana focused on music data, starting with Spotify. Your music listening history is valuable for consumer insights and trend forecasting. We are a group of organizers, music lovers, and researchers interested in taking back control of our music history, which Spotify currently holds a monopoloy on. Let's transform our music data into currency.</p>
                 <h2>Redefine the Rules</h2>
                 <p>UNWRAPPED is your gateway to data democracy. Consumer insights data is incredible valuable, as it allows companies to predict the next fashion, music, and cultural trends. Join our DAO and have a voice in how your collective listening data is used and shared. It's time to make your music truly matter!</p>
                 <h2>How to Join</h2>
                 <ol>
                     <li>Connect your Spotify account</li>
                     <li>Agree to share your listening data</li>
+                    <li>Add optional fashion preferences and demographics</li>
                     <li>Receive BOPS tokens based on your cultural prominence</li>
                     <li>Start voting on data usage proposals</li>
                 </ol>
@@ -238,7 +239,7 @@
         </div>
         <div class="footer">
             <div>
-                Contract Address: <a href="https://etherscan.io/address/0x1234567890123456789012345678901234567890" target="_blank">0x1234567890123456789012345678901234567890</a>
+                Contract Address: <a href="https://satori.vanascan.io/token/0x430dB004998F2dfa81e0AF4D68850Bff5c865DFF" target="_blank">0x430dB004998F2dfa81e0AF4D68850Bff5c865DFF</a>
             </div>
             <div>
                 Built on <a href="https://vana.org" target="_blank">Vana</a>
@@ -254,10 +255,10 @@
             <p>UNWRAPPED is a Spotify Data DAO that allows users to monetize their listening habits and participate in data governance.</p>
             <h3>How do I earn BOPS tokens?</h3>
             <p>You earn BOPS tokens by connecting your Spotify account and sharing your listening data. The amount of tokens you receive is based on your cultural prominence.</p>
-            <h3>What can I do with BOPS tokens?</h3>
-            <p>BOPS tokens allow you to vote on data usage proposals and participate in the governance of the DAO.</p>
+            <h3>What can I do with BOPS?</h3>
+            <p>BOPS allow you to vote on data usage proposals and participate in the governance of the DAO.</p>
             <h3>Is my data safe?</h3>
-            <p>We take data privacy seriously. Your data is anonymized and you have control over how it's used through the DAO voting system.</p>
+            <p>Your data is secured on the Vana network. See docs.vana.org for more info.</p>
         </div>
     </div>
 
