--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <li>Connect your Spotify account</li>
                     <li>Agree to share your listening data</li>
                     <li>Add optional fashion preferences and demographics</li>
-                    <li>Receive BOPS tokens based on your cultural prominence</li>
+                    <li>Receive BOPS based on your cultural prominence</li>
                     <li>Start voting on data usage proposals</li>
                 </ol>
             </div>
@@ -253,8 +253,8 @@
             <h2>Frequently Asked Questions</h2>
             <h3>What is UNWRAPPED?</h3>
             <p>UNWRAPPED is a Spotify Data DAO that allows users to monetize their listening habits and participate in data governance.</p>
-            <h3>How do I earn BOPS tokens?</h3>
-            <p>You earn BOPS tokens by connecting your Spotify account and sharing your listening data. The amount of tokens you receive is based on your cultural prominence.</p>
+            <h3>How do I earn BOPS?</h3>
+            <p>You earn BOPS by connecting your Spotify account and sharing your listening data. The amount you receive is based on your cultural prominence.</p>
             <h3>What can I do with BOPS?</h3>
             <p>BOPS allow you to vote on data usage proposals and participate in the governance of the DAO.</p>
             <h3>Is my data safe?</h3>
