--- a/index.html
+++ b/index.html
@@ -244,6 +244,9 @@
             <div>
                 Built on <a href="https://vana.org" target="_blank">Vana</a>
             </div>
+            <div>
+                <a href="https://github.com/spotify-data-dao" target="_blank">GitHub</a>
+            </div>
         </div>
     </div>
 
